test/fail/MPTC_MultipleVars.curry
{-# LANGUAGE MultiParamTypeClasses #-}

class C a a where

class D b c b where
